# melanoma-detection

./: CNN Melanoma Detection.ipynb  DeteccaoMelanoma.ipynb  LICENSE  Melanoma_Dataset_Metadados.ipynb  README.md  image_data_validator.py  kaggle.json  melanoma-cancer-pytorch-lightning-cnn.ipynb  melanoma-detection.py  pyproject.toml
